fix(ui): fix width of left nav in case search results are too much

--- a/asset/media/style.css
+++ b/asset/media/style.css
@@ -270,7 +270,7 @@ main>div {
 }
 
 aside {
-  flex: 0 14rem;
+  width: 14em;
   border-right: var(--frame-thickness) solid var(--h);
 }
 
